<resources>
    <string name="app_name">EigenNavigationDrawer</string>
    <string name="mail">Mail</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="danyel_fijten">Danyel Fijten</string>
    <string name="danyelfijten_hotmail_com">Danyelfijten@hotmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="chat_fragment" />
    <string name="profile_fragment" />
</resources>
