<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_mail"
            android:title="@string/mail" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_portrait_black"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>